# TFG

./: .gitattributes  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.claude/commands/: audit.md
Anexo B/Entregas/: presentacion_anexo_B.pptx
Burocracia/: presentacion_progreso.pptx
Burocracia/Anexo B/: Anexo B.tex  anexo_B.docx  ref_annex_b.bib
Burocracia/Memoria/: tfg.tex  tipos_bibliografia.bib
Fuentes/: guerra_cognitiva.md  herramientas_python_grafos_ABM_visualizacion.md  resumen-guerra-cognitiva.docx
Fuentes/Documentos/: Cognitive Warfare - Definicion y Framework - español.docx
Fuentes/IA/: cybersecurity_dynamics_framework_extrapolacion_guerra_cognitiva.md  guerra_cognitiva_estado_del_arte.md  modelizacion_sociedad_grafos.md  tipos_grafos_aleatorios_analisis.md
Memoria/: tfg.docx
data/: _smoke.csv  _smoke.json  _smoke_hyper.csv  _smoke_hyper.json  simulation.csv  simulation.json
src/: datacollector.py  model.py  network_simulation.py  networkx_grafos.ipynb  pruebas.ipynb  simulation.py  snap_downloader.py  visualizer.py
src/agents/: __init__.py  base.py  stochastic.py
src/graphs/: __init__.py  base.py  hypergraph.py  random.py  snap.py
src/notebooks/: networkx_grafos.ipynb  pruebas.ipynb
